# reservation-demo

./: .env  .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/fixtures/: config.yaml
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs  pager.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221115102037_init.down.sql  20221115102037_init.up.sql  20221115112154_reservation.down.sql  20221115112154_reservation.up.sql  20221115112605_reservation_trigger.down.sql  20221115112605_reservation_trigger.up.sql  20221116042134_reservation_func.down.sql  20221116042134_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 001-core-reservation.md
service/: Cargo.toml
service/src/: lib.rs  main.rs  service.rs
