[package]
name = "reservation_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
futures = { version = "0.3.25", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
tokio = { version = "1.23.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_yaml = "0.9.14"
shellexpand = "3.0.0"
